2004-10-25  Chris Kelly <ckdake@users.sf.net>  1.4.5-cvs-b253

	* Fix 1052876: Corrected CSS for RSS button
	
2004-10-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b252

	* Fix 1034893: Fix the print dropdowns in 'suit'

2004-10-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b251

	* Fix 995510: Better animated gif support under ImageMagick

2004-10-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b250

	* Fix 1052559: Regex error in gallery_mail() caused the char preceding
	  or following a bare \n to be removed during conversion.

	* Change:  whitespace/readability.  No flow changes

2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b249

	* Fix: fitToWindow didn't work with image frames, since the frames themselves
	  were never resized to match the new image height.

2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b248

	* Change: Fix margin on Search form for IE.

	* Fix 783843: Get rid of width=3000 and width=4000 - all of the recent
	  layouts have finally made this unnecessary!

	* Fix 839037: Allow relative URLs, but warn the user that it will break
	  some features (printing, etc.) since the printer will not be able to find
	  the Gallery install.

	* Fix 930742: Prevent repetetive automatic re-highlighting of an album 
	  during delete.

	* Change: register_globals issue - canCreate, isAdmin and Cancel on 
	  the modify_user page

	* Fix 1047814: Renamed the 'action' field to 'formaction' to prevent JS/DOM
	  naming conflict

2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b247

	* Fix 1003564: Custom textcolor not applied to captions

	* Fix 1023569: RSS was removing "non-print" characters, which b0rked
	  non-US languages.

2004-10-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b246

	* Fix 1006567: If an image filename is stripped of disallowed chars,
	  and the new filename is blank, use newPhotoName() to get a unique name
	  from the album.
